@@ -18,6 +18,8 @@ mlr_new:
 - Added "sd" estimator for regr.randomForest.
 - Fixed a mini bug in ModelMultiplexer where hyperpars that are only needed in
   predict were not passed down correctly
+- Fixed a bug where the function capLargeValues wasn't working if you passed a task.
+- capLargeValues now has a new argument "target", to prevent from capping response values.
 
 - API changes
 -- listLearners now returns a data frame with properties of the learners if
